--- a/style.css
+++ b/style.css
@@ -5,19 +5,26 @@
 
 body {
   background: #7D8A2E;
+  padding: 3rem 0 0 0;
 }
 
-header, main, footer {
+header {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   background: #C9D787;
   border: 0.1rem solid #C9D787;
 }
 
-header {
-  height: auto;
-}
-
 main {
   background: #FFFFFF;
+  border: 0.1rem solid #FFFFFF;
+}
+
+footer {
+  background: #C9D787;
+  border: 0.1rem solid #C9D787;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
 h1, h2 {
@@ -28,7 +35,7 @@ h1, h2 {
 h1 {
   font-size: 4rem;
   color: #FFFFFF;
-  margin: 1rem;
+  margin: 1.5rem;
 }
 
 article {
@@ -46,7 +53,7 @@ div {
 
 figure {
   background: #C9D787;
-  margin: 1rem 1rem 3rem 1rem;
+  margin: 1rem 1rem 3rem 0;
   padding: 1rem;
   border-radius: 3rem;
   box-shadow: 0 0.5rem 0 #7D8A2E;
@@ -77,6 +84,11 @@ figure.chosen_kitty:hover {
   cursor: default;
 }
 
+figure.chosen_kitty:active {
+  box-shadow: 0 0.2rem 0 #FFC0A9;
+  transform: translateY(0.3rem);
+}
+
 figure.unchosen_kitty:hover {
   background: #C9D787;
   box-shadow: 0 0.4rem 0 #7D8A2E;
@@ -84,14 +96,27 @@ figure.unchosen_kitty:hover {
   cursor: default;
 }
 
-img {
+figure.unchosen_kitty:active {
+  box-shadow: 0 0.2rem 0 #7D8A2E;
+  transform: translateY(0.3rem);
+}
+
+
+figure>img {
   border-radius: 3rem;
+  border: 0.1rem solid #7D8A2E;
+}
+
+figure.chosen_kitty>img {
+  border-radius: 3rem;
+  border: 0.1rem solid #FFC0A9;
 }
 
 button {
   background: #FF8598;
   font-family: RockSalt;
   border-width: 0;
+  border-radius: 1rem;
   color: #FFFFFF;
   box-shadow: 0 0.4rem 0 #FFC0A9;
   transition: all .1s linear;
@@ -113,10 +138,31 @@ button:focus {
   color: #FFFFFF;
 }
 
+
+@media (min-width: 900px) {
+  .user_opinion {
+    width: 82.6666666667%;
+    margin-left: 8.66666666667%;
+    float: left;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 899px) {
+  .user_opinion {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
 .user_opinion {
+  background: #C9D787;
   display: block;
-  height: 38px;
-  margin: 0 0 1rem 0;
+  min-height: 38px;
+  padding: 0.75rem 0.75rem 0 0.75rem;
+  margin-top: 0.1rem;
+  margin-bottom: 0.85rem;
+  border-radius: 1rem;
   font-family: RockSalt;
   color: #7D8A2E;
 }
