Make app correctly sync, so that votes are added to correct object. Fix reset button.

--- a/style.css
+++ b/style.css
@@ -174,3 +174,12 @@ aside {
 #more_kittens {
   margin: 1rem 0 3rem 0;
 }
+
+a {
+  cursor: pointer;
+  color: #7D8A2E;
+}
+
+a:hover {
+  color: #FFFFFF;
+}
